# cudp

./: CMakeLists.txt  LICENSE  README.md  cudadevice.cu  cudadevice.h  deviceinfowidget.cpp  deviceinfowidget.h  deviceinfowidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
